--- a/lumi/templates/base/share_data.html
+++ b/lumi/templates/base/share_data.html
@@ -6,10 +6,8 @@
 <meta property="og:title" content="Luminate Financial Group - Loan Portal" />
 <meta property="og:description"
       content="Secure loan application portal for marketing loans, renovation loans, and deposit loans through Luminate Financial Group's trusted partner network." />
-<meta property="og:image"
-      content="https://app.luminate.co.nz{% static 'images/og-image.jpg' %}" />
-<meta property="og:image:secure_url"
-      content="https://app.luminate.co.nz{% static 'images/og-image.jpg' %}" />
+<meta property="og:image" content="https://app.luminate.co.nz" />
+<meta property="og:image:secure_url" content="https://app.luminate.co.nz" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
@@ -24,8 +22,7 @@
 <meta name="twitter:title" content="Luminate Financial Group - Loan Portal" />
 <meta name="twitter:description"
       content="Secure loan application portal for marketing loans, renovation loans, and deposit loans through Luminate Financial Group's trusted partner network." />
-<meta name="twitter:image"
-      content="https://app.luminate.co.nz{% static 'images/twitter-card.jpg' %}" />
+<meta name="twitter:image" content="https://app.luminate.co.nz" />
 <meta name="twitter:image:alt"
       content="Luminate Financial Group - Secure Loan Portal" />
 <meta name="twitter:site" content="@LuminateNZ" />
