sendgrid and manager area

--- a/lumi/templates/global/sidebar.html
+++ b/lumi/templates/global/sidebar.html
@@ -9,7 +9,7 @@
       <div class="card w-100">
         <div class="card-header">Admin Menu</div>
         <div class="card-body">
-          <ul class="list-group w-100">
+          <ul class="list-group list-group-flush w-100">
             <li class="list-group-item">
               <a class="nav-link" href="{% url 'manager:dashboard' %}">Dashboard</a>
             </li>
